# fury

./: CMakeLists.txt  README.md  config.h
src/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Object.cpp  Object.h  main.cpp
src/entities/: Map.cpp  Map.h  Player.cpp  Player.h
src/math/: vmath.h
src/objects/: Ground.cpp  Ground.h  Triangle.cpp  Triangle.h
